--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -371,6 +371,7 @@
 				<configuration>
 					<configLocation>${main.basedir}/checkstyle-checks.xml</configLocation>
 					<suppressionsLocation>${main.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
+					<propertyExpansion>config_loc=${main.basedir}</propertyExpansion>
 					<consoleOutput>true</consoleOutput>
 					<includeTestSourceDirectory>true</includeTestSourceDirectory>
 					<resourceIncludes>**\/*.java</resourceIncludes>
