--- a/AndroidAnnotations/androidannotations-roboguice/pom.xml
+++ b/AndroidAnnotations/androidannotations-roboguice/pom.xml
@@ -17,14 +17,13 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-parent</artifactId>
-		<version>4.6.0-SNAPSHOT</version>
+		<version>4.6.0</version>
 	</parent>
 
 	<artifactId>androidannotations-roboguice</artifactId>
