--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -17,8 +17,7 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -29,7 +28,7 @@
 
 	<groupId>org.androidannotations</groupId>
 	<artifactId>androidannotations-parent</artifactId>
-	<version>4.6.0-SNAPSHOT</version>
+	<version>4.6.0</version>
 	<packaging>pom</packaging>
 
 	<name>AndroidAnnotations Parent</name>
@@ -422,7 +421,7 @@
 		<connection>scm:git:git@github.com:androidannotations/androidannotations.git</connection>
 		<developerConnection>scm:git:git@github.com:androidannotations/androidannotations.git</developerConnection>
 		<url>https://github.com/androidannotations/androidannotations</url>
-		<tag>HEAD</tag>
+		<tag>androidannotations-4.6.0</tag>
 	</scm>
 
 	<profiles>
