--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -181,12 +181,6 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.robolectric</groupId>
 				<artifactId>robolectric</artifactId>
 				<version>${robolectric.version}</version>
@@ -195,7 +189,7 @@
 			<dependency> <!-- TODO https://github.com/robolectric/robolectric/issues/2562#issuecomment-263086503 -->
 				<groupId>org.robolectric</groupId>
 				<artifactId>android-all</artifactId>
-				<version>8.1.0-robolectric-4402310</version>
+				<version>9-robolectric-4913185-2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -219,7 +213,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>2.11.0</version>
+				<version>2.24.0</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
