--- a/examples/kotlin/build.gradle
+++ b/examples/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.1.51"
+    ext.kotlin_version = "1.3.21"
 
     repositories {
         google()
@@ -7,13 +7,14 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath "com.android.tools.build:gradle:3.0.0"
+        classpath "com.android.tools.build:gradle:3.3.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
     }
 }
 
 repositories {
+    google()
     mavenLocal()
     mavenCentral()
 }
@@ -24,12 +25,11 @@ apply plugin: "kotlin-allopen"
 apply plugin: "kotlin-kapt"
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 28
     }
     sourceSets {
         main.java.srcDirs += "src/main/kotlin"
@@ -54,5 +54,5 @@ def AAVersion = "4.7.0-SNAPSHOT" // change this to your desired version, for exa
 dependencies {
     kapt "org.androidannotations:androidannotations:$AAVersion"
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
