--- a/examples/gradle/src/main/AndroidManifest.xml
+++ b/examples/gradle/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.androidannotations.sample"
     android:versionCode="1"
     android:versionName="1.0">
 
     <application
+        android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MyActivity_"
             android:label="@string/app_name">
