--- a/AndroidAnnotations/androidannotations-ormlite/pom.xml
+++ b/AndroidAnnotations/androidannotations-ormlite/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-parent</artifactId>
-		<version>4.7.0-SNAPSHOT</version>
+		<version>4.7.0</version>
 	</parent>
 
 	<artifactId>androidannotations-ormlite</artifactId>
