--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -28,7 +28,7 @@
 
 	<groupId>org.androidannotations</groupId>
 	<artifactId>androidannotations-parent</artifactId>
-	<version>4.7.0</version>
+	<version>4.8.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>AndroidAnnotations Parent</name>
@@ -415,7 +415,7 @@
 		<connection>scm:git:git@github.com:androidannotations/androidannotations.git</connection>
 		<developerConnection>scm:git:git@github.com:androidannotations/androidannotations.git</developerConnection>
 		<url>https://github.com/androidannotations/androidannotations</url>
-		<tag>androidannotations-4.7.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<profiles>
